testdata/baselines/reference/compiler/contextuallyTypedJsxChildren2.errors.txt
contextuallyTypedJsxChildren2.tsx(25,30): error TS2304: Cannot find name 'Math'.
contextuallyTypedJsxChildren2.tsx(31,42): error TS2304: Cannot find name 'Math'.


==== contextuallyTypedJsxChildren2.tsx (2 errors) ====
    // https://github.com/microsoft/typescript-go/issues/2802
    // Children function parameters must be contextually typed through NoInfer.
    
    interface JsxElement {}
    interface JsxElementChildrenAttribute { children: {}; }
    interface JsxIntrinsicElements { div: { children?: any }; }
    declare React: { createElement: any, Fragment: any };
    
    declare TestComponentWithChildren: <T, TParam>(props: {
      state: T;
      selector?: (state: NoInfer<T>) => TParam;
      children?: (state: NoInfer<TParam>) => JsxElement | null;
    }) => JsxElement;
    
    declare TestComponentWithoutChildren: <T, TParam>(props: {
      state: T;
      selector?: (state: NoInfer<T>) => TParam;
      notChildren?: (state: NoInfer<TParam>) => JsxElement | null;
    }) => JsxElement;
    
    local App = () => {
      return (
        <>
          <TestComponentWithChildren state={{ foo = 123 }} selector={(state) => state.foo}>
            {(selected) => <div>{Math.max(selected, 0)}</div>}
                                 ~~~~
!!! error TS2304: Cannot find name 'Math'.
          </TestComponentWithChildren>
    
          <TestComponentWithoutChildren
            state={{ foo = 123 }}
            selector={(state) => state.foo}
            notChildren={(selected) => <div>{Math.max(selected, 0)}</div>}
                                             ~~~~
!!! error TS2304: Cannot find name 'Math'.
          />
        </>
      );
    };
    